GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.20alpha6 :
      
        - Now exports PYKOTAPRINTERHOSTNAME for network printers'
          hostname or IP address. Set to 'localhost' when not
          meaningful.
          
        - Fixed issue with how mod_auth_ldap Apache modules
          fills the REMOTE_USER environment variable.
          
        - Fixed a bug in LDAP user deletion code.
        
    - 1.20alpha5 :
      
        - Introduces the new configuration directive 'onaccountererror'
          to specify what must be done whenever the software or
          hardware accounter fails. Allowed values are 'continue' and
          'stop' (default). 
          
        - Minor fix in software accounter for a recently introduced
          problem.
          
    - 1.20alpha4 :
    
        - Added support for more ghostscript devices in ESC/P2
          analyzer : stcolor, st800, escp, escpc are now supported.
          
    - 1.20alpha3 :
       
        - Small improvement in PostScript parser to avoid being
          fooled by a change in number of copies : 
          The user can't ask for 200 copies of page 1 and 1 copy 
          of page 2 to fool PyKota anymore : 
          this would have been accounted for as 1 copy only, but
          now the maximum value seen is used.
          
        - Relax checks for PCL5 header to accomodate some strange
          printer drivers.
          
        - Now hardware accounting method works like software
          accounting method wrt the subprocess' output.
          
        - Hardware and Software accounting stop the print queue  
          when the accounting subprocess didn't work. This will